--- a/Django_Redis/templates/Redis.html
+++ b/Django_Redis/templates/Redis.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>This is the redis test</h1>
-{{ time_out }}
+{{ time_out }}<br>
+{{ keys }}<br>
+{{ delete }}<br>
 </body>
 </html>
