--- a/Ckeitor_Learn/templates/Ckeditor.html
+++ b/Ckeitor_Learn/templates/Ckeditor.html
@@ -7,9 +7,15 @@
     <script type="text/javascript" src={% static "ckeditor/ckeditor-init.js" %}></script>
     <script type="text/javascript" src={% static "ckeditor/ckeditor/ckeditor.js" %}></script>
 </head>
+<script type="text/javascript">
+    function GetContect() {
+          var Content = CKEDITOR.instances.TextArea1.getData();
+          alert(Content);
+    }
+</script>
 <body>
 
-<textarea id="TextArea1" style="width: 30px;height: 30px" class="ckeditor"></textarea>
+<textarea id="TextArea1" style="width: 30px;height: 30px" class="ckeditor" name="TextArea1"></textarea>
 
 <script type="text/javascript">
     CKEDITOR.replace('TextArea1', {
@@ -17,6 +23,7 @@
     });
 </script>
 
-<button></button>
+<button value="提取内容" name="GetContent" onclick="GetContect();">提取内容</button>
+
 </body>
 </html>
