获取富文本生成的HTML内容的方法

--- a/Ckeitor_Learn/templates/Ckeditor.html
+++ b/Ckeitor_Learn/templates/Ckeditor.html
@@ -25,5 +25,10 @@
 
 <button value="提取内容" name="GetContent" onclick="GetContect();">提取内容</button>
 
+<script type="text/javascript">
+    window.addEventListener("storage",function (e) {
+
+    },false);
+</script>
 </body>
 </html>
